	12111,Wrapped_Food: gets 3 of any food<- food or mixed food? Need to know so it can be implemented. [Skotlex]
	4198,Maya_Purple_Card: intravision not working atm
	4296,Cramp_Card: Temporal Plug: 10z per mob-level on a 3% chance.
	1771,Venom_Knife: For new Asassins skill
		Item type: Throwing Dagger. Has to be equipped as an arrow, is consumed
		like gemstones when the skill is used.
	--

10/23
	* Added healing effect to mixed foods, added produce effect to cooking sets [DracoRPG]
	* Updated Poring V's mode, thanks to Vicious Pucca. [Skotlex]
	* Updated castle_db.txt for correct work on /guildbreak [Lupus]
10/22
	* Changed Extremity Fist and Investigate's range to 3. [Skotlex]
	* Bumped Magaleta's heal levels to 9 and 10. [Skotlex]
10/19
	* Corrected a bunch of spells that should be "no overlap" in skill_unit_db.
	  [Skotlex]
	* Added Arrow Vulcan to skill_castnodex.txt to specify you shouldn't be
	  able to walk during the skill's delay. [Skotlex]
	* Gave normal Magaleta a stronger heal (Lv1 is kinda sad...), also made her
	  cast heal 10 on nearby friends when their HP drops below 60% [Skotlex]
	* Double bug fix: 4303,Whisper_Boss_Card [Lupus]
	- Fixed wrong Poki's card desc.. and found.. that we weren't adding 3% MaxHP... but +3
	* Added new item. Thanks to Landarma. And Fixed an old item stat. [Nexon]
	* Added a few more loot sell prices to the einbroch items [MasterOfMuppets] 
	* Corrected NPC_STOP, it should have at least range 1 (currently range 8
	  for lack of better info) and inf should be 1 (attack skill) not 4
	  (used on self). Also changed it's time to 10secs as 2sec is really too
	  low. [Skotlex]
	* Fixed constants for Karma and Manner in db/const.txt, thanks to orn. [Skotlex]
10/18
	* More translations for japanese comments, again thanks to sighel. [MasterOfMuppets]
	* Updated Thanatos' mode to include boss-type (Thanatos and several of the
	  mobs in the same dungeon are supposed to be looters? That's what I read
	  from here). [Skotlex]