@@ -1,6 +1,8 @@
 Date	Added
 ==========
 2005/10/23
+	* Fixed trading. [Skotlex]
+	* Removed Mastery damage being applied to Grand Cross [Skotlex]
 	* Some more fine-tuning of the Grand Cross equation. [Skotlex]
 	* Fixed mobs that couldn't attack not being able to use skills (first half
 	  of why marine spheres were broken). [Skotlex]
