@@ -552,7 +552,7 @@
 1231,Bazerald,Bazerald,4,,10,500,70,,1,0,2055918,7,2,2,4,36,1,1,{ bonus bAtkEle,Ele_Fire; bonus bInt,5; bonus bMatkRate,10; }
 1232,Assassin_Dagger,Assasin Dagger,4,,10,600,140,,1,0,4096,7,2,2,4,36,1,1,{ bonus bMaxHPrate,20; bonus bMaxSPrate,15; bonus bAspdRate,2; }
 1233,Exercise,Excorcise,4,,10,700,90,,1,0,2055918,7,2,2,4,36,1,1,{ bonus bIgnoreDefRace,RC_Demon; bonus2 bSubRace,RC_Demon,5; bonus2 bSubRace,RC_DemiHuman,-10; }
-1234,Moonlight_Sword,Walgwanggum,4,,10,700,50,,1,0,2055918,7,2,2,4,36,1,1,{ bonus bMaxSPrate,10; bonus2 bSPDrainRate,1000,3; }
+1234,Moonlight_Sword,Walgwanggum,4,,10,700,50,,1,0,2055918,7,2,2,4,36,1,1,{ bonus bMaxSPrate,10; bonus2 bSPDrainValue,3; }
 1235,Azoth,Azoth,4,,10,700,110,,1,0,262144,7,2,2,4,36,1,1,{ bonus bClassChange,300; }
 1236,Sucsamad,Sucsamad,4,,10,800,140,,1,0,2055918,7,2,2,4,36,1,1,{ bonus2 bAddEle,2,Ele_Earth; bonus2 bAddEle,Ele_Wind,10; bonus bUnbreakableWeapon,0; }
 1237,Grimtooth_,Grimtooth,4,,10,800,180,,1,0,2055918,7,2,2,4,36,1,1,{ bonus bFlee,10; bonus bFlee2,5; bonus bDefRate,-50; bonus bDef2Rate,-50; }
